2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* InfoManager.cs: When setting the title of the window, switch the
	order of the arguments so that the text is 'foo.dll to foo.xml'. This
	makes the title consistent with how the data is interpreted - a '+'
	means foo.dll has something which foo.xml does not.

2010-04-22  Jb Evain  <jbevain@novell.com>

	* InfoManager.cs: update with .net 4.0 RTM and SL 4.0 RTW infos.

2010-04-02  Jeffrey Stedfast  <fejj@novell.com>

	* InfoManager.cs (Ensure): Don't combine 'tar' and its arguments
	together for the pi.FileName. This doesn't work. Set the arguments
	on pi.Arguments like we're supposed to instead.

2010-02-27  Rodrigo Kumpera <rkumpera@novell.com>

	* gtk-gui/GuiCompare.CustomCompare.cs: Make custom compares
	work again. Someone should fix the stetic file cuz I don't
	have the skills for it.

2010-02-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* InfoManager.cs: Add support for SL4 beta.

2010-02-12  Marek Habersack  <mhabersack@novell.com>

	* Comparison.cs: added ExtraInfo field and a new constructor which
	takes extra info as one of the parameters.

	* Masterinfo.cs: exposed property collections in the
	XMLAttributeProperties and XMLAttributes classes.

	* gui-compare.in: added $MONO_OPTIONS to the mono command line

	* Makefile.am (guicompare_DATA): install .mdb as well

	* InfoManager.cs: CompareDefinition.Title now includes the
	framework profile name.
	Profiles with no entries aren't added to the Compare menu.

	* Metadata.cs: added ExtraInfo property.

	* CecilMetadata.cs, MasterMetadata.cs: added support for reading
	type forwarders (the TypeForwardedTo attribute).
	Added support for gathering and displaying information about
	custom attribute properties.

	* MainWindow.cs: summary label replaced with a TextView. 
	Added Pango markup to TextView tags conversion method.

2010-02-10  Marek Safar <marek.safar@gmail.com>

	* MasterMetadata.cs: Ignore ComVisible.
