@@ -1,3 +1,7 @@
+2010-06-04  Marek Habersack  <mhabersack@novell.com>
+
+	* MainWindow.cs: don't crash when comparison failed.
+
 2010-04-26  Alan McGovern  <amcgovern@novell.com>
 
 	* InfoManager.cs: When setting the title of the window, switch the
